fix #68 and remove boost threads/system dependencies. changed to c++0x

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,9 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" ST
     endif()
 
     set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-Os")
-    add_definitions(-std=c++11)
+    add_definitions(-std=c++0x)
+    #add_definitions(-std=c++11)
+    #add_definitions(-std=gnu++0x)
 
     #-Wl,--no-undefined
     #set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-Os -static-libgcc -Wl,-O2 -Wl,--as-needed -Wl,--sort-common")
@@ -140,62 +142,70 @@ function(find_boost_from_distname_file)
     endif()
 endfunction(find_boost_from_distname_file)
 
-if (NOT Boost_INCLUDE_DIR)
-    if (BOOST_ROOT)
-        get_filename_component(BOOST_ROOT "${BOOST_ROOT}" ABSOLUTE)
-        set(Boost_INCLUDE_DIR ${BOOST_ROOT}/include)
-    else()
-        if (NOT WIN32)
-            find_package(Boost 1.46.0 COMPONENTS system thread)
-        endif()
-        # we should think about cmake superbuild with ExternalProject_Add as the replacement for find_or_build_package (next generation)
-        if (NOT Boost_INCLUDE_DIR)
+set (USE_BOOST_THREAD FALSE)
+
+if (USE_BOOST_THREAD)
+    if (NOT Boost_INCLUDE_DIR)
+        if (BOOST_ROOT)
+            get_filename_component(BOOST_ROOT "${BOOST_ROOT}" ABSOLUTE)
+            set(Boost_INCLUDE_DIR ${BOOST_ROOT}/include)
+        else()
+            if (NOT WIN32)
+                find_package(Boost 1.46.0 COMPONENTS system thread)
+            endif()
+            # we should think about cmake superbuild with ExternalProject_Add as the replacement for find_or_build_package (next generation)
+            if (NOT Boost_INCLUDE_DIR)
+                find_boost_from_distname_file()
+
+            endif()
+            find_or_build_package_check(Boost boost Boost_INCLUDE_DIR False)
             find_boost_from_distname_file()
 
+            #exit()
+        endif(BOOST_ROOT)
+        message(STATUS "BOOST_ROOT, ${BOOST_ROOT}")
+    endif()
+
+    message(STATUS "Boost_INCLUDE_DIR, ${Boost_INCLUDE_DIR}")
+
+    if (MSVC)
+        find_package(Boost 1.46.0 COMPONENTS system thread)
+
+        if (NOT Boost_THREAD_FOUND)
+            set(Boost_THREAD_FOUND ON)
+        endif (NOT Boost_THREAD_FOUND)
+        link_directories(${BOOST_LIBRARYDIR})
+
+    else(MSVC)
+        find_package(Boost 1.46.0 COMPONENTS system thread REQUIRED)
+        link_directories(${BOOST_LIBRARYDIR})
+    endif(MSVC)
+
+    if (Boost_INCLUDE_DIR)
+        message(STATUS "boost include: ${Boost_INCLUDE_DIR}")
+        include_directories(${Boost_INCLUDE_DIR})
+        set (CMAKE_REQUIRED_INCLUDES ${Boost_INCLUDE_DIR})
+            check_include_file_cxx(boost/interprocess/managed_shared_memory.hpp HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP
+                            HINT ${Boost_INCLUDE_DIR})
+            check_include_file_cxx(boost/bind.hpp BOOST_BIND_FOUND
+                            HINT ${Boost_INCLUDE_DIR})
+            set(BOOST_BIND_FOUND ON)
+        if (HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP)
+            message( STATUS "HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP ${HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP} ${Boost_INCLUDE_DIR}")
+            option (USE_IPC "Use support for interprocess communication" ON)
+        else()
+            message( "HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP 0 ${HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP} ${Boost_INCLUDE_DIR}")
+            set(USE_IPC  OFF)
+            set(HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP 0 )
         endif()
-        find_or_build_package_check(Boost boost Boost_INCLUDE_DIR False)
-        find_boost_from_distname_file()
+    endif (Boost_INCLUDE_DIR)
 
-        #exit()
-    endif(BOOST_ROOT)
-    message(STATUS "BOOST_ROOT, ${BOOST_ROOT}")
+    mark_as_advanced(Boost_INCLUDE_DIR BOOST_ROOT)
+else()
+    set(Boost_THREAD_FOUND OFF)
+    set(BOOST_BIND_FOUND OFF)
+    set(USE_IPC OFF)
 endif()
-
-message(STATUS "Boost_INCLUDE_DIR, ${Boost_INCLUDE_DIR}")
-
-if (MSVC)
-	find_package(Boost 1.46.0 COMPONENTS system thread)
-
-	if (NOT Boost_THREAD_FOUND)
-		set(Boost_THREAD_FOUND ON)
-	endif (NOT Boost_THREAD_FOUND)
-	link_directories(${BOOST_LIBRARYDIR})
-
-else(MSVC)
-    find_package(Boost 1.46.0 COMPONENTS system thread REQUIRED)
-	link_directories(${BOOST_LIBRARYDIR})
-endif(MSVC)
-
-if (Boost_INCLUDE_DIR)
-    message(STATUS "boost include: ${Boost_INCLUDE_DIR}")
-    include_directories(${Boost_INCLUDE_DIR})
-	set (CMAKE_REQUIRED_INCLUDES ${Boost_INCLUDE_DIR})
-		check_include_file_cxx(boost/interprocess/managed_shared_memory.hpp HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP
-						   HINT ${Boost_INCLUDE_DIR})
-		check_include_file_cxx(boost/bind.hpp BOOST_BIND_FOUND
-						   HINT ${Boost_INCLUDE_DIR})
-		set(BOOST_BIND_FOUND ON)
-	if (HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP)
-		message( STATUS "HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP ${HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP} ${Boost_INCLUDE_DIR}")
-		option (USE_IPC "Use support for interprocess communication" ON)
-	else()
-		message( "HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP 0 ${HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP} ${Boost_INCLUDE_DIR}")
-		set(USE_IPC  OFF)
-		set(HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP 0 )
-	endif()
-endif (Boost_INCLUDE_DIR)
-
-mark_as_advanced(Boost_INCLUDE_DIR BOOST_ROOT)
 
 # Find packages that CHOLMOD depends on
 set(CMAKE_LIBRARY_PATH ${EXTERNAL_DIR}/lib $ENV{EXTERNAL_DIR}/lib ${CMAKE_LIBRARY_PATH})
@@ -376,6 +386,7 @@ message(STATUS "****************************************************************
 message(STATUS "************************* Dependencies found *************************")
 message(STATUS "**********************************************************************")
 message(STATUS "THREADS            :${Threads_FOUND}    ${CMAKE_THREAD_LIBS_INIT}")
+message(STATUS "USE_BOOST_THREADS  :${USE_BOOST_THREAD} ${Boost_THREAD_LIBRARIES}")
 message(STATUS "CHOLMOD_LIBRARIES  :${CHOLMOD_LIBRARIES}")
 message(STATUS "UMFPACK_LIBRARIES  :${UMFPACK_LIBRARIES}")
 message(STATUS "TRIANGLE_FOUND     :${TRIANGLE_FOUND}    Triangle_LIBRARIES: ${Triangle_LIBRARIES}")
