--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,6 +1,6 @@
 # Requirements to test and build the documentation
 # Install via pip: sudo pip install -r requirements.txt
-Sphinx>=1.2
+sphinx<=1.5.1
 matplotlib>=1.3
 numpy>=1.8
 numpydoc>=0.5
