#14 add support for python logger from c++core call pg.log(). add first playground in testing/test_logger.py. Still need some tuning and we should collect experience.

--- a/config.cmake.h.in
+++ b/config.cmake.h.in
@@ -18,6 +18,8 @@
 
 #define BOOST_BIND_FOUND @BOOST_BIND_FOUND@
 
+#define PYTHON_FOUND @PYTHON_FOUND@
+
 #define TRIANGLE_FOUND @TRIANGLE_FOUND@
 
 #define CHOLMOD_FOUND @CHOLMOD_FOUND@
