Rename changelog to markdown for proper GitHub Rendering

--- a/.grenrc
+++ b/.grenrc
@@ -3,6 +3,5 @@
     "ignoreLabels": [],
     "ignoreIssuesWith": ["question", "discussion"],
     "onlyMilestones": false,
-    "groupBy": "label",
-    "changelogFilename": "CHANGELOG.rst"
+    "groupBy": "label"
 }
