Ensure correct exit code when calling

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -83,7 +83,7 @@ ADD_CUSTOM_COMMAND(
     COMMAND
         ${PYTHON_EXECUTABLE}
     ARGS
-         -c 'import pygimli\; pygimli.test(show=False)'
+         -c 'import pygimli\; pygimli.test(show=False, abort=True)'
     TARGET
         pgtest
    )
