fix boost thread switch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,10 +162,12 @@ function(find_boost_from_distname_file)
     endif()
 endfunction(find_boost_from_distname_file)
 
-if (NOT WIN32)
-    set (USE_BOOST_THREAD FALSE)
-else()
-    set (USE_BOOST_THREAD TRUE)
+if (NOT USE_BOOST_THREAD)
+    if (NOT WIN32)
+        set (USE_BOOST_THREAD FALSE)
+    else()
+        set (USE_BOOST_THREAD TRUE)
+    endif()
 endif()
 
 if (USE_BOOST_THREAD)
