--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,13 +1,13 @@
 # Requirements to test and build the documentation
-# Install via pip: sudo pip install -r requirements.txt
-sphinx<=1.5.1
-matplotlib>=1.3
-numpy>=1.8
-numpydoc>=0.5
+# Install via pip: sudo pip install -U -r requirements.txt
+sphinx >= 1.6
+matplotlib>=2.0
+numpy>=1.12
+numpydoc>=0.7
 pytest
 pytest-cov
-sphinx-gallery>=0.0.10
-sphinxcontrib-bibtex>=0.3
+sphinx-gallery>=0.0.13
+sphinxcontrib-bibtex>=0.3.4
 sphinxcontrib-programoutput>=0.8
 sphinxcontrib-spelling>=2.1
 pillow
