--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -77,6 +77,10 @@ if(WIN32)
     include_directories(${PYTHON_INCLUDE_DIR})
 endif(WIN32)
 
+if(CONDA_BUILD)
+    include_directories(${Boost_INCLUDE_DIR})
+endif(CONDA_BUILD)
+
 
 ADD_CUSTOM_TARGET(pgtest)
 ADD_CUSTOM_COMMAND(
