small conda config update v.3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ project(libgimli)
 if(DEFINED ENV{CONDA_BUILD})
     message(STATUS "Conda package is being created.")
     set(CONDA_BUILD TRUE)
+    set(Boost_INCLUDE_DIR ${CONDA_PREFIX})
 else()
     set(CONDA_BUILD FALSE)
 endif()
