small conda config update v.4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ project(libgimli)
 if(DEFINED ENV{CONDA_BUILD})
     message(STATUS "Conda package is being created.")
     set(CONDA_BUILD TRUE)
-    set(Boost_INCLUDE_DIR ${CONDA_PREFIX})
+    set(Boost_INCLUDE_DIR "${CONDA_PREFIX}/include")
 else()
     set(CONDA_BUILD FALSE)
 endif()
@@ -435,6 +435,9 @@ endif()
 message(STATUS "**********************************************************************")
 message(STATUS "************************* Dependencies found *************************")
 message(STATUS "**********************************************************************")
+if (CONDA_BUILD)
+    message(STATUS "CONDA_BUILD: ${CONDA_BUILD}")
+endif()
 message(STATUS "THREADS            :${Threads_FOUND}    ${CMAKE_THREAD_LIBS_INIT}")
 message(STATUS "USE_BOOST_THREAD   :${USE_BOOST_THREAD} ${Boost_THREAD_LIBRARIES}")
 message(STATUS "CHOLMOD_LIBRARIES  :${CHOLMOD_LIBRARIES}")
