--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ project(libgimli)
 if(DEFINED ENV{CONDA_BUILD})
     message(STATUS "Conda package is being created.")
     set(CONDA_BUILD TRUE)
-    set(Boost_INCLUDE_DIR "${CONDA_PREFIX}/include")
+    set(Boost_INCLUDE_DIR "${CMAKE_PREFIX_PATH}/include")
 else()
     set(CONDA_BUILD FALSE)
 endif()
