--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,9 @@ if (PYTHON_FOUND)
     target_link_libraries(${libgimli_TARGET_NAME} ${PYTHON_LIBRARY})
 endif (PYTHON_FOUND)
 
+if (CONDA_BUILD)
+    include_directories(${CONDA_PREFIX})
+endif()
 
 
 if (USE_BOOST_THREAD)
